fix(services): fix services__text-container wrapping, it looked janky before on mobile

--- a/src/input.css
+++ b/src/input.css
@@ -174,7 +174,7 @@
 
     /* services section */
     .services {
-        height: 700px;
+        min-height: 700px;
         width: 100vw;
     }
 
@@ -201,7 +201,7 @@
     }
 
     .services__text-container {
-        height: 388px;
+        min-height: 388px;
     }
 
     .services__text-container h1 {
